--- a/package.json
+++ b/package.json
@@ -8,9 +8,9 @@
   "dependencies": {
     "express": "3.4.7",
     "jade": "*",
-      "mongodb": "*",
-      "mongoose":">=2.3.1",
-      "connect-mongo": "*",
-      "connect-flash": "*"
+    "mongodb": "*",
+    "connect-mongo": "*",
+    "connect-flash": "*",
+    "mongoose": "~3.8.4"
   }
 }
