--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "mpromise": "^0.5.5",
     "mquery": "^1.6.0",
     "ms": "^0.7.1",
+    "multer": "^0.1.8",
     "muri": "^1.1.0",
     "regexp-clone": "0.0.1",
     "serve-favicon": "^2.2.1",
