--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
     "gulp-less": "^3.0.2",
     "gulp-minify-css": "^1.0.0",
     "gulp-uglify": "^1.1.0",
-    "gulp-util": "^3.0.4"
+    "gulp-util": "^3.0.4",
+    "concurrently": "^1.0.0",
+    "lite-server": "^1.3.1",
+    "typescript": "^1.7.3"
   },
   "dependencies": {
     "async": "^1.2.1",
@@ -34,6 +37,13 @@
     "muri": "^1.1.0",
     "regexp-clone": "0.0.1",
     "serve-favicon": "^2.2.1",
-    "sliced": "0.0.5"
+    "sliced": "0.0.5",
+    "angular2": "2.0.0-beta.0",
+    "systemjs": "0.19.6",
+    "es6-promise": "^3.0.2",
+    "es6-shim": "^0.33.3",
+    "reflect-metadata": "0.1.2",
+    "rxjs": "5.0.0-beta.0",
+    "zone.js": "0.5.10"
   }
 }
