--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "typescript": "^1.7.3"
   },
   "dependencies": {
-    "angular2": "2.0.0-beta.0",
+    "angular2": "^2.0.0-beta.2",
     "async": "^1.2.1",
     "body-parser": "^1.14.2",
     "connect": "^3.4.0",
