--- a/package.json
+++ b/package.json
@@ -44,7 +44,6 @@
     "rxjs": "5.0.0-beta.0",
     "serve-favicon": "^2.2.1",
     "sliced": "0.0.5",
-    "systemjs": "0.19.6",
-    "zone.js": "0.5.10"
+    "systemjs": "0.19.6"
   }
 }
