--- a/package.json
+++ b/package.json
@@ -1,49 +1,52 @@
 {
+	"engines": {
+	"node": "5.10.1"
+  },
   "devDependencies": {
-    "gulp": "^3.8.11",
-    "gulp-css-prefix": "^0.1.0",
-    "gulp-imagemin": "^2.2.1",
-    "gulp-less": "^3.0.2",
-    "gulp-minify-css": "^1.0.0",
-    "gulp-uglify": "^1.1.0",
-    "gulp-util": "^3.0.4",
-    "concurrently": "^1.0.0",
-    "lite-server": "^1.3.1",
-    "typescript": "^1.7.3"
+	"gulp": "^3.8.11",
+	"gulp-css-prefix": "^0.1.0",
+	"gulp-imagemin": "^2.2.1",
+	"gulp-less": "^3.0.2",
+	"gulp-minify-css": "^1.0.0",
+	"gulp-uglify": "^1.1.0",
+	"gulp-util": "^3.0.4",
+	"concurrently": "^1.0.0",
+	"lite-server": "^1.3.1",
+	"typescript": "^1.7.3"
   },
   "dependencies": {
-    "angular2": "^2.0.0-beta.2",
-    "async": "^1.2.1",
-    "body-parser": "^1.14.2",
-    "connect": "^3.4.0",
-    "connect-flash": "^0.1.1",
-    "connect-mongo": "^0.8.1",
-    "cookie-parser": "^1.3.5",
-    "errorhandler": "^1.4.0",
-    "es6-promise": "^3.0.2",
-    "es6-shim": "^0.33.3",
-    "express": "^4.12.4",
-    "express-session": "^1.12.1",
-    "fs": "0.0.2",
-    "gm": "^1.18.1",
-    "gulp-typescript": "^2.10.0",
-    "hooks-fixed": "^1.0.1",
-    "jade": "^1.10.0",
-    "kareem": "^1.0.1",
-    "method-override": "^2.3.5",
-    "mongodb": "^2.0.33",
-    "mongoose": "^4.0.5",
-    "mpath": "^0.2.1",
-    "mpromise": "^0.5.5",
-    "mquery": "^1.6.0",
-    "ms": "^0.7.1",
-    "multer": "^0.1.8",
-    "muri": "^1.1.0",
-    "reflect-metadata": "0.1.2",
-    "regexp-clone": "0.0.1",
-    "rxjs": "5.0.0-beta.0",
-    "serve-favicon": "^2.2.1",
-    "sliced": "0.0.5",
-    "systemjs": "0.19.6"
+	"angular2": "^2.0.0-beta.2",
+	"async": "^1.2.1",
+	"body-parser": "^1.14.2",
+	"connect": "^3.4.0",
+	"connect-flash": "^0.1.1",
+	"connect-mongo": "^0.8.1",
+	"cookie-parser": "^1.3.5",
+	"errorhandler": "^1.4.0",
+	"es6-promise": "^3.0.2",
+	"es6-shim": "^0.33.3",
+	"express": "^4.12.4",
+	"express-session": "^1.12.1",
+	"fs": "0.0.2",
+	"gm": "^1.18.1",
+	"gulp-typescript": "^2.10.0",
+	"hooks-fixed": "^1.0.1",
+	"jade": "^1.10.0",
+	"kareem": "^1.0.1",
+	"method-override": "^2.3.5",
+	"mongodb": "^2.0.33",
+	"mongoose": "^4.0.5",
+	"mpath": "^0.2.1",
+	"mpromise": "^0.5.5",
+	"mquery": "^1.6.0",
+	"ms": "^0.7.1",
+	"multer": "^0.1.8",
+	"muri": "^1.1.0",
+	"reflect-metadata": "0.1.2",
+	"regexp-clone": "0.0.1",
+	"rxjs": "5.0.0-beta.0",
+	"serve-favicon": "^2.2.1",
+	"sliced": "0.0.5",
+	"systemjs": "0.19.6"
   }
 }
